# ExplainCode

./: .gitignore  README.md  explaincode_compiler.py  explaincode_interpreter.py  explaincode_lang_server.py  pyproject.toml
examples/: data_structures.epd  error_handling.epd  find_max.epd  loops_demo.epd  mad.eai  mad.txt  sentiment_model.eai  sum_until_limit.epd
explaincode/: compiler.py  interpreter.py
explaincode/lang/: lsp_server.py
explaincode_lang/: __init__.py  parser.py
